methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:58: error: illegal character '\u200b'
​
^PictureMono2:58: error: illegal start of definition
​
^